--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,9 +15,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  frideos_core: ^0.4.1
+  frideos_core: ^0.4.2    
   frideos_light:
     path: ../
+  rxdart: ^0.21.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
